2007-01-26	Rupert Germann <rupi@gmx.li>

	* fix: the ajax category tree works correctly with different charsets now.

2007-01-25	Rupert Germann <rupi@gmx.li>

	* new feature: "don't use pid_list". In sites with huge pagetrees where it is needed to have the news not in a few sysfolders but in the complete pagetree the check for the pid_list in tt_news can be a big performance eater because thousands of pages have to be checked for visibility and added to the sql query. From now on it is possible to disable the use of the parameters "pid_list" and "recursive" when the TS var "plugin.tt_news.dontUsePidList = 1" is set. Thank goes to Franz Ripfel for sponsoring this feature.
	* new feature: added a new backend module called "tt_news category manager". This module is located under web/info. It shows the complete category tree - of course expandable and collapsable - and offers drag and drop for moving and copying news categories.
	* thanks: Many thank goes to: CNV (Christelijk Nationaal Vakverbond) for sponsoring the ajax category tree.
	* improvement: rewrote the check for recursive categories. Creating recursive categories is now prevented by a function which hooks in tcemain. This works for normal category records and for the category manager
	* improvement: removed the file flexform_ds_no_sPID.xml because it is not needed anymore.
	* changed copyrights to 2007
	
2007-01-15	Ingo Renner <typo3@ingo-renner.com>

	* new feature: forceFirstImageIsPreview (see manual)

2006-12-09	Rupert Germann <rupi@gmx.li>

	* new feature: if the extension xajax is installed, the category tree in BackEnd forms can now be expanded and collapsed. If you have a huge category tree this will speed up the rendering of the tree significantly. This feature still needs some work because it collides with the check for recursive categories which is currently disabled.